S78 Written representations (part 1) prototype updated

--- a/app/views/appeal/before-you-start/v19/planning/cya.html
+++ b/app/views/appeal/before-you-start/v19/planning/cya.html
@@ -2,17 +2,17 @@
 
 {% block questions %}
 
-  <p class="govuk-body-l" style="background-color: yellow; padding: 0.5rem;">
+  <!-- <p class="govuk-body-l" style="background-color: yellow; padding: 0.5rem;">
     Not for build:<br>
-<!--
+
     Application type is {{ data['appeal-type'] }}<br>
 
     Applications date month is {{ data ['application-date-month'] }}<br>
-    Applications date year is {{ data ['application-date-year'] }}<br> -->
+    Applications date year is {{ data ['application-date-year'] }}<br>
 
     Appeal type is {{ data['appealIs'] }}<br>
 
-  </p>
+  </p> -->
 
   {{ super() }}
 
