--- a/app/views/appeal/s78e/v2/before-you-continue.html
+++ b/app/views/appeal/s78e/v2/before-you-continue.html
@@ -28,23 +28,22 @@
 
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      separate ownership certificate and agricultural land declaration
-    </li>
-    <li>
       decision letter from the local authority
     </li>
     <li>
-      draft statement of common ground, if you have one
+      your reasons for appealing, or an appeal statement
     </li>
     <li>
       planning obligation
     </li>
+    <li>
+      information related to ownership of the land
+    </li>
+    <li>
+      an environmental statement
+    </li>
 
   </ul>
-<!--
-  <p class="govuk-body">
-    From now, you're able to save your appeal and come back later.
-  </p> -->
 
 {% endblock %}
 
