--- a/app/views/appeal/s78e/v2/prepare-appeal/agent-check-organisation.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/agent-check-organisation.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Are you employed by '+(data['appellant-company-name'] or 'Acme Ltd.')+'?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   {{ govukRadios({
     idPrefix: 'agent-check-organisation',
     name: 'agent-check-organisation',
