--- a/app/views/appeal/s78e/v2/prepare-appeal/agricultural-others.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/agricultural-others.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Are there any other tenants?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   {{ govukRadios({
     idPrefix: 'agricultural-others',
     name: 'agricultural-others',
