--- a/app/views/appeal/s78e/v2/prepare-appeal/appellant-company.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/appellant-company.html
@@ -1,6 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'What is the name of the organisation?' %}
+{% set pageName = title + ' - Planning Inspectorate'%}
 
 {% block questions %}
 
