--- a/app/views/appeal/s78e/v2/prepare-appeal/appellant-names.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/appellant-names.html
@@ -17,7 +17,7 @@
   }
 ] %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   <section class="govuk-!-margin-bottom-6">
 
