--- a/app/views/appeal/s78e/v2/prepare-appeal/application-about.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/application-about.html
@@ -1,6 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'Was your application about any of the following?' %}
+{% set pageName = title + ' - Planning Inspectorate'%}
 
 {% block questions %}
 
