--- a/app/views/appeal/s78e/v2/prepare-appeal/application-date.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/application-date.html
@@ -2,7 +2,7 @@
 
 {% set title = 'What date did you submit your planning application?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {{ govukDateInput({
     id: "application-date",
