--- a/app/views/appeal/s78e/v2/prepare-appeal/application-desc-changed.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/application-desc-changed.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Did the local planning authority change the description of development?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {{ govukRadios({
     idPrefix: 'application-desc-changed',
