--- a/app/views/appeal/s78e/v2/prepare-appeal/contact-details.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/contact-details.html
@@ -2,7 +2,7 @@
 
 {% set title = 'What&rsquo;s your name?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {% call govukFieldset({
     legend: {
