--- a/app/views/appeal/s78e/v2/prepare-appeal/grounds.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/grounds.html
@@ -2,7 +2,7 @@
 
 {% set title = 'What are your grounds of appeal?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   <h1 class="govuk-heading-l">
     {{ title }}
