--- a/app/views/appeal/s78e/v2/prepare-appeal/health-and-safety.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/health-and-safety.html
@@ -1,6 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'Health and safety issues' %}
+{% set pageName = title + ' - Planning Inspectorate'%}
 
 {% block questions %}
 
@@ -20,15 +21,16 @@
     {{ title }}
   </h1>
 
-  <p class="govuk-body">Understanding any health and safety issues will help an inspector carry out a site visit.</p>
+  <p class="govuk-body">Understanding any health and safety issues at the site will help an inspector carry out a site visit.</p>
 
   <p class="govuk-!-margin-bottom-2">For example:</p>
   <ul class="govuk-list govuk-list--bullet">
-    <li>animals at the site, for example pets or livestock</li>
-    <li>poor mobile signal at the site</li>
+    <li>animals, for example pets or livestock</li>
+    <li>any vulnerable or potentially violent people</li>
+    <li>poor mobile signal</li>
     <li>access issues for people with limited mobility</li>
-    <li>overgrown vegetation that could restrict access to the site</li>
-    <li>building works or other operations taking place on the site</li>
+    <li>overgrown vegetation that could restrict access</li>
+    <li>building works or other operations taking place</li>
     <li>site-specific safety arrangements that are in place</li>
     <li>areas of the site that require specialist equipment or training for access, for example heights or confined spaces</li>
     <li>requirements to view the site from a height, for example from a roof or balcony</li>
