--- a/app/views/appeal/s78e/v2/prepare-appeal/own-others.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/own-others.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Do you know who owns the rest of the land involved in the appeal?' if data['own-some'] == 'Yes' else 'Do you know who owns the land involved in the appeal?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   {{ govukRadios({
     idPrefix: 'own-others',
     name: 'own-others',
