--- a/app/views/appeal/s78e/v2/prepare-appeal/request-a-new-phone-number-code.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/request-a-new-phone-number-code.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Check your phone' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   <h1 class="govuk-heading-l">Request a new security code</h1>
 
