--- a/app/views/appeal/s78e/v2/prepare-appeal/significant-changes.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/significant-changes.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Have there been any significant changes that would affect the application?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   <span class="govuk-caption-l">
     Appeal process
