--- a/app/views/appeal/s78e/v2/prepare-appeal/site-visibility.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/site-visibility.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Will an inspector need to access your land or property?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
