--- a/app/views/appeal/s78e/v2/upload-documents/environment-statement-check.html
+++ b/app/views/appeal/s78e/v2/upload-documents/environment-statement-check.html
@@ -1,8 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Was an environment statement submitted with the application?' %}
-
-
+{% set title = 'Did you submit an environment statement with the application?' %}
+{% set pageName = title + ' - Planning Inspectorate'%}
 
 {% block questions %}
 
