--- a/app/views/appeal/s78e/v2/prepare-appeal/address.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/address.html
@@ -1,6 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'What&rsquo;s the address of the appeal site?' %}
+{% set pageName = title + ' - Planning Inspectorate'%}
 
 {% block questions %}
   {% call govukFieldset({
