--- a/app/views/appeal/s78e/v2/prepare-appeal/agricultural-holding.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/agricultural-holding.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Is the appeal site part of an agricultural holding?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   {{ govukRadios({
     idPrefix: 'agricultural-holding',
     name: 'agricultural-holding',
