--- a/app/views/appeal/s78e/v2/prepare-appeal/appellant-name.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/appellant-name.html
@@ -2,7 +2,7 @@
 
 {% set title = 'What is the name of the individual who made the planning application?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {% call govukFieldset({
     legend: {
