--- a/app/views/appeal/s78e/v2/prepare-appeal/application-reference.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/application-reference.html
@@ -2,7 +2,7 @@
 
 {% set title = 'What is the planning application reference number?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {{ govukInput({
     label: {
