--- a/app/views/appeal/s78e/v2/prepare-appeal/other-appeal-reference.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/other-appeal-reference.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Enter the appeal reference number' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {{ govukInput({
     label: {
