--- a/app/views/appeal/s78e/v2/prepare-appeal/other-appeals.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/other-appeals.html
@@ -13,7 +13,7 @@
   }
 ] %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   <h1 class="govuk-heading-l">
     {{title}}
