--- a/app/views/appeal/s78e/v2/prepare-appeal/own-all.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/own-all.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Do you own all the land involved in the appeal?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   {{ govukRadios({
     idPrefix: 'own-all',
     name: 'own-all',
