--- a/app/views/appeal/s78e/v2/prepare-appeal/owners-searched.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/owners-searched.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Identifying the landowners' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
