--- a/app/views/appeal/s78e/v2/prepare-appeal/procedure--length.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/procedure--length.html
@@ -2,7 +2,7 @@
 
 {% set title = 'How many days would you expect the inquiry to last?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   {{ govukInput({
     id: 'procedure-lenth',
     name: 'procedure-lenth',
