--- a/app/views/appeal/s78e/v2/prepare-appeal/site-area.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/site-area.html
@@ -2,7 +2,7 @@
 
 {% set title = 'What is the area of the appeal site?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {% call govukFieldset({
     legend: {
