--- a/app/views/appeal/s78e/v2/upload-documents/costs.html
+++ b/app/views/appeal/s78e/v2/upload-documents/costs.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Upload your application for an award of appeal costs' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
@@ -21,7 +21,7 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        text: 'Each file must be a DOC, DOCX, PDF, XLS, TIF, JPG or PNG and be smaller than 25MB'
+        text: 'Each file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 25MB'
       }
     }) }}
 
