--- a/app/views/appeal/s78e/v2/upload-documents/design-access-check.html
+++ b/app/views/appeal/s78e/v2/upload-documents/design-access-check.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Did you submit a design and access statement with your application?' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
 
   {% call govukFieldset({
     legend: {
