--- a/app/views/appeal/s78e/v2/upload-documents/ownership-certificate.html
+++ b/app/views/appeal/s78e/v2/upload-documents/ownership-certificate.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Upload your separate ownership certificate and agricultural land declaration' %}
 
-{% block questions %}
+{% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
